added project update

--- a/index.html
+++ b/index.html
@@ -3,10 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Conceptual page</title>
+    <title>Maldives</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 </head>
-<body>
-    <h1>Hello there</h1>
+<body> 
+    <div class="hero">
+        <h1>
+            The Cow
+        </h1>
+    </div>
+    <div class="article">
+        <!-- content -->
+
+        <h2>An Essay about Cow</h2>
+
+        <p>
+            Cow is a animal.It gives us lots of things. <span class="imp">Its gives us milk</span> ,meet etc.Cow have four lags,2 eyes,one tail,2 ear.They eat grasses etc. Lorem ipsum dolor, Cows, members of the Bovidae family, are herbivorous mammals domesticated for their milk, meat, and hides. They possess a unique digestive system with four stomach compartments and regurgitate food to chew it again, known as cud. Grazing primarily on grass and forage, they have cloven hooves and weigh between 1,000 to 1,800 pounds. Cows exhibit social behavior, forming strong bonds within herds, communicating through body language and vocalizations. Selective breeding has resulted in various breeds for specific purposes like dairy or beef production. Revered in many cultures historically, they symbolize fertility and abundance and play integral roles in agriculture and farming practices worldwide.
+        </p>
+    </div>
+    
 </body>
 </html>
