added last update of this project

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body> 
     <div class="hero">
         <h1>
-            The Cow
+            The Castle
         </h1>
     </div>
     <div class="article">
@@ -21,6 +21,23 @@
         <p>
             Cow is a animal.It gives us lots of things. <span class="imp">Its gives us milk</span> ,meet etc.Cow have four lags,2 eyes,one tail,2 ear.They eat grasses etc. Lorem ipsum dolor, Cows, members of the Bovidae family, are herbivorous mammals domesticated for their milk, meat, and hides. They possess a unique digestive system with four stomach compartments and regurgitate food to chew it again, known as cud. Grazing primarily on grass and forage, they have cloven hooves and weigh between 1,000 to 1,800 pounds. Cows exhibit social behavior, forming strong bonds within herds, communicating through body language and vocalizations. Selective breeding has resulted in various breeds for specific purposes like dairy or beef production. Revered in many cultures historically, they symbolize fertility and abundance and play integral roles in agriculture and farming practices worldwide.
         </p>
+    </div>
+
+    <div id="car-type">
+        <h2>
+            Types of Car
+        </h2>
+        <div class="car-images" >
+            <div>
+                <img  src="https://images.unsplash.com/photo-1494976388531-d1058494cdd8?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="first car">
+            </div>
+            <div>
+                <img src="https://images.unsplash.com/photo-1511919884226-fd3cad34687c?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="second car">
+            </div>
+            <div>
+                <img src="https://imageio.forbes.com/specials-images/imageserve/5d35eacaf1176b0008974b54/2020-Chevrolet-Corvette-Stingray/0x0.jpg?format=jpg&crop=4560,2565,x790,y784,safe&width=1440" alt="third car">
+            </div>
+        </div>
     </div>
     
 </body>
